fix overflow all messed up

--- a/packages/p2p/src/components/my-profile/my-profile-stats/my-profile-name/my-profile-name.scss
+++ b/packages/p2p/src/components/my-profile/my-profile-stats/my-profile-name/my-profile-name.scss
@@ -34,6 +34,10 @@
         flex-direction: row;
         padding: 0.8rem 0;
 
+        @include mobile {
+            white-space: initial;
+        }
+
         &__row {
             align-items: center;
             border-right: 1px solid var(--general-section-1);
